--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# CakePHP 3
 
 /vendor/*
 /config/app.php
@@ -17,9 +16,14 @@
 /logs/*
 !/logs/empty
 
-# CakePHP 2
 
 /app/tmp/*
 /app/Config/core.php
 /app/Config/database.php
 /vendors/*
+
+/.idea
+/.vscode
+/*.lock
+
+*.cache
